--- a/weather.html
+++ b/weather.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <title>Weather App</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,7 @@
             </h1>
             <h3>Weather App </h3>
             <input type="text" id="city-input" placeholder="Enter city name">
-            <button id="city-input-btn">Get Weather</button>
+            <button id="city-input-btn" onclick="weatherFn($('#city-input').val())">Get Weather</button>
             <div id="weather-info" class="animate__animated animate__fadeIn">
                 <h3 id="city-name"></h3>
                 <p id="date"></p>
@@ -26,14 +27,8 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://momentjs.com/downloads/moment/min.js"></script>
-    <script src="script2.js"></script>
-    <script>
-        $('#city-input-btn').on('click',function(){
-            let cityName=$('#city-input').val();
-            weatherFn(cityName);
-        });
+    <script src="script.js">
     </script>
     
 </body>
