--- a/weather.html
+++ b/weather.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="weather-card">
             <h1 style="color:green;">
-                Jammu & Kashmir
+                OASIS
             </h1>
             <h3>Weather App </h3>
             <input type="text" id="city-input" placeholder="Enter city name">
