--- a/weather.html
+++ b/weather.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"> -->
     <title>Weather App</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -16,7 +16,7 @@
             </h1>
             <h3>Weather App </h3>
             <input type="text" id="city-input" placeholder="Enter city name">
-            <button id="city-input-btn" onclick="weatherFn($('#city-input').val())">Get Weather</button>
+            <button id="city-input-btn">Get Weather</button>
             <div id="weather-info" class="animate__animated animate__fadeIn">
                 <h3 id="city-name"></h3>
                 <p id="date"></p>
