--- a/weather.html
+++ b/weather.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"> -->
+    <meta charset="UTF-8">
     <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="weather-card">
-            <h1 style="color:green;">
-                OASIS
-            </h1>
-            <h3>Weather App </h3>
+            <h1 style="color:green;">OASIS</h1>
+            <h3>Weather App</h3>
+
             <input type="text" id="city-input" placeholder="Enter city name">
             <button id="city-input-btn">Get Weather</button>
-            <div id="weather-info" class="animate__animated animate__fadeIn">
+
+            <div id="weather-info">
                 <h3 id="city-name"></h3>
                 <p id="date"></p>
                 <img id="weather-icon" src="" alt="Weather Icon">
@@ -27,9 +28,7 @@
             </div>
         </div>
     </div>
-    <script src="https://momentjs.com/downloads/moment/min.js"></script>
-    <script src="script.js">
-    </script>
-    
+
+    <script src="script.js"></script>
 </body>
 </html>
